# CppOpenScraper

./: .gitmodules  CMakeLists.txt  README.md
examples/: scrape_url.cpp
src/: ContentExtractor.cpp  ContentExtractor.hpp  Fetcher.cpp  Fetcher.hpp  LexborDocument.cpp  LexborDocument.hpp  ScrapedPage.hpp  Scraper.cpp  Scraper.hpp
tests/: CMakeLists.txt  ContentExtractorTest.cpp
tests/fixtures/: anime_planet.html  hacker_news.html  marketbeat_baba.html  wikipedia_cpp.html  yahoo_finance_aapl.html
